# Forecasting-and-or-Nowcasting-of-Solar-Flares-using-combined-Soft-and-Hard-X-ray-data-from-Aditya-L1

./: .gitignore  README.md  docker-compose.yml  metadata.json  server.ts
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  errors.py  main.py  schemas.py  utils.py
backend/app/routers/: alerts.py  catalogue.py  health.py  observations.py  predictions.py
backend/app/services/: alerts.py  catalogue.py  ingestion.py  modeling.py  preprocessing.py
backend/scripts/: smoke_test.py
backend/tests/: test_api.py  test_preprocessing.py
docs/: backend_design.md
src/: App.tsx  data.ts  types.ts
src/components/: CodeViewer.tsx  SolarLineChart.tsx  TabActiveLearning.tsx  TabAnomalyDetector.tsx  TabDataCommunicator.tsx  TabDigitalTwin.tsx  TabMcDropout.tsx  TabMultiHorizon.tsx  TabPhysicsLoss.tsx  TabSpaceRisk.tsx  TabStateCatalogue.tsx  TabSyntheticGan.tsx
