[project]
name = "suryadrishti-ai-backend"
version = "1.0.0"
description = "FastAPI backend for Aditya-L1 SoLEXS and HEL1OS solar flare nowcasting and forecasting."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
]

[project.optional-dependencies]
science = [
  "astropy>=6.1",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
